# hsmp-amd

./: .gitignore  .version  CMakeLists.txt
cmake_modules/: utils.cmake  version_util.sh
docs/: README.md
src/: e_smi.c
tools/: e_smi_tool.c
